<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Business Line</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_outbrain">Sponsered Content</string>
    <string name="info_home_explore">Explore Section</string>
    <string name="info_widget_viewall">SEE MORE FROM</string>
    <string name="info_widget_opinion_title">Opinion</string>
    <string name="info_widget_opinion_Content">Opinion Content</string>
    <string name="info_widget_multimedia_title">Multimedia</string>
    <string name="customize_news_feed_menu">Personalise Home Screen</string>
    <string name="custom_notification_menu">Manage Notifications</string>
    <string name="setting_menu">Settings</string>
    <string name="clear_all_menu">Clear All</string>
    <string name="share_app_menu">Share this app</string>
    <string name="news_digest_menu">News Digest</string>
    <string name="info_help">Help</string>
    <string name="info_aboutus">About Us</string>
    <string name="info_termsconditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="select_topic">Select topics to personalize your  home screen</string>
    <string name="select_interset">Choose your Interests</string>
    <string name="intital_setup_customize">Personalise app</string>
    <string name="intital_setup_localize">Localise app</string>
    <string name="intital_setup_customize_info">We will show more news from topics you choose in the Home Screen</string>
    <string name="intital_setup_localize_info">Select the regional news you would like to read in the Home Screen</string>
    <string name="update_text">Updated: </string>
    <string name="by_text">By: </string>
    <string name="recomended_by">Recommended By</string>
    <string name="more_from_hindu">More From Businessline</string>
    <string name="outbrain_recomendation_title">Sponsored Stories</string>
    <string name="post_comment">Post a comment</string>
    <string name="postcomment">Post Comment</string>
    <string name="related_article">Related Articles</string>
    <string name="ok">Ok</string>
    <string name="permision_available_location">Location Permission has been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_location_rationale">Location permission is needed to show the location preview.</string>
    <string name="hint_name">Name</string>
    <string name="hint_search_bookmark">Search </string>
    <string name="hint_email">Email</string>
    <string name="hint_comment_message">Comment Message</string>
    <string name="how_to_menu">How to/Help</string>
    <string name="t_c_menu">T&amp;C</string>
    <string name="terms_heading"><h2>TERMS &amp; CONDITIONS [T&amp;C] &amp; RULES &amp; REGULATIONS [R&amp;R]</h2></string>
    <string name="terms_conditions_phone">Tel: +91-44-28576300</string>
    <string name="terms_conditions_email">Email: web.thehindu@thehindu.co.in</string>
    <string name="about_us_menu">About us</string>
    <string name="info_version">Version 2.0</string>
    <string name="powerd_by">Powered by </string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="p_change">% Change</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="currency_inr">Currency (INR)</string>
    <string name="tt_selling">TT\nSelling</string>
    <string name="tt_buying">TT\nBuying</string>
    <string name="bill_selling">BILL\nSelling</string>
    <string name="bill_buying">BILL\nBuying</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_in">Login</string>
    <string name="please_provide">Please login to view your portfolio</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_register">Not a registered user?</string>
    <string name="signup">Sign Up</string>
</resources>