<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context="com.mobstac.thehindubusinessline.fragments.SignInFragment">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbarSize="0dp">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.mobstac.thehindubusinessline.view.LatoSemiBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/color_black_in_day_white_in_night"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <com.mobstac.thehindubusinessline.view.LatoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="11sp"
                    android:padding="2dp"
                    android:text="@string/please_provide"
                    android:textColor="#818181"
                    android:textSize="14sp" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:backgroundTint="@color/editTextBottomLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:backgroundTint="@color/editTextBottomLine" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/drawable_fill_blue"
                android:text="@string/action_sign_in"
                android:textColor="@color/White"
                android:textSize="14sp" />

            <com.mobstac.thehindubusinessline.view.LatoSemiBoldTextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#1375b3"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.mobstac.thehindubusinessline.view.LatoRegularTextView
                    android:id="@+id/latoRegularTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/not_a_register"
                    android:textColor="@color/color_black_in_day_white_in_night"
                    android:textSize="16sp" />

                <com.mobstac.thehindubusinessline.view.LatoSemiBoldTextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="11sp"
                    android:paddingLeft="8dp"
                    android:text="@string/signup"
                    android:textColor="#1375b3"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
