<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_home_widget_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.mobstac.thehindubusinessline.view.SerifOffcTextView
            android:id="@+id/term_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/terms_heading"
            android:textColor="@color/color_static_text"
            android:textSize="23sp" />

        <com.mobstac.thehindubusinessline.view.SerifOffcTextView
            android:id="@+id/t_c_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            />

        <com.mobstac.thehindubusinessline.view.SerifOffcTextView
            android:id="@+id/term_conditions_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:text="@string/terms_conditions_phone"
            android:textColor="@color/color_static_text"
            android:textSize="18sp" />

        <com.mobstac.thehindubusinessline.view.SerifOffcTextView
            android:id="@+id/term_conditions_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/terms_conditions_email"
            android:textColor="@color/color_static_text"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>