<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_home_widget_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.mobstac.thehindubusinessline.view.SerifOffcTextView
                android:id="@+id/textview_aboutsu_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableLeft="@mipmap/logo"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/logo"
                android:gravity="bottom"
                android:paddingBottom="8dp"
                android:text="@string/info_version"
                android:textColor="@color/color_static_text"
                android:textSize="14sp" />

            <com.mobstac.thehindubusinessline.view.SerifOffcTextView
                android:id="@+id/aboutUsWebView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="start" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerd_by"
            android:textColor="@color/text_warm_grey"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:contentDescription="@string/about_us_menu"
            android:src="@mipmap/poweredbyninestars" />
    </LinearLayout>

</RelativeLayout>